<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/str_change_password" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_event"
            android:title="@string/str_add_note" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_headset"
            android:title="@string/str_add_lables" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_forum"
            android:title="@string/str_quit" />
    </group>

    <group android:id="@+id/text_1">
        <item
            android:actionLayout="@layout/item_label"
            android:icon="@drawable/ic_dashboard"
            android:onClick="@null"
            android:title="@string/str_version_info" />
    </group>
</menu>
